# deeplake

./: #1172.ipynb  .bazeliskrc  .bazelrc  .clang-format  .coveragerc  .dccache  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  1.16.39  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  MANIFEST.in  OPERATOR OVERLOADING.txt  README.md  README.pt.md  README.zh-cn.md  README_CN.md  README_FR.md  README_ID.md  README_KR.md  README_TR.md  ROADMAP.md  SECURITY.md  Taskfile.yml  WORKSPACE  _config.yml  benchmark_upload.py  candycrush.cpp  chunk_benchmark.py  colab_tutorial.md  (+57 more)
cpp/: CMakeLists.pg.cmake  CMakeLists.txt  CMakePresets.json  Doxyfile  vcpkg-configuration.json  vcpkg.json
cpp/async/: async.hpp  callback_type.hpp  context.hpp  exceptions.hpp  handle_base.hpp  priority.hpp  promise.hpp  queue.hpp  result.hpp  run.hpp  shared_promise.hpp  timer_manager.hpp
cpp/base/: assert.hpp  atfork.hpp  backtrace.hpp  base.hpp  bit_cast.hpp  concat.hpp  config.hpp  cpu_features.hpp  exception.hpp  f16.hpp  f16_wrapper.hpp  format.hpp  function.hpp  getenv.hpp  htype.hpp  log_channel.hpp  logger.hpp  logger_adapter.hpp  logging_span_holder.hpp  memory_buffer.hpp  memory_info.hpp  memory_policy.hpp  overloads.hpp  random.hpp  read_buffer.hpp  source_location_holder.hpp  span_cast.hpp  spin_lock.hpp  system_report.hpp  type_traits.hpp
cpp/bifrost/: async_prefetcher.hpp  column_streamer.hpp  exceptions.hpp
cpp/cmake/: Cloud.cmake  FindBackward.cmake  FindGoogleTest.cmake  FindJson.cmake  FindPybind11.cmake  FindSpdlog.cmake  FindStduuid.cmake  Options.cmake
cpp/codecs/: compression.hpp
cpp/deeplake/: column_datafiles_info.hpp  column_definition.hpp  schema.hpp  types.hpp
cpp/deeplake_api/: branch.hpp  branches.hpp  column.hpp  column_definition.hpp  column_definition_view.hpp  column_view.hpp  dataset.hpp  dataset_view.hpp  deeplake_api.hpp  exceptions.hpp  format_definition.hpp  history.hpp  http.hpp  log_entry.hpp  metadata.hpp  prefetcher.hpp  read_only_dataset.hpp  replay_log.hpp  row.hpp  row_range.hpp  row_range_view.hpp  row_view.hpp  schema.hpp  schema_view.hpp  tag.hpp  tag_view.hpp  tags.hpp  tags_view.hpp  tql.hpp  types.hpp  version.hpp
cpp/deeplake_core/: audio_type.hpp  basic_index_type.hpp  bbox_type.hpp  bmask_type.hpp  chunk_format_definition.hpp  chunk_strategy.hpp  class_label_type.hpp  datafile_format.hpp  datafile_header.hpp  datafile_reader.hpp  datafile_writer.hpp  deeplake_index_type.hpp  dict_type.hpp  embedding_index_type.hpp  embedding_type.hpp  exceptions.hpp  format_definition.hpp  generic_type.hpp  image_type.hpp  index_type.hpp  link_type.hpp  medical_type.hpp  mesh_type.hpp  point_type.hpp  polygon_type.hpp  sample.hpp  sample_range.hpp  schema.hpp  sequence_type.hpp  smask_type.hpp  struct_type.hpp  text_type.hpp  type.hpp  video_type.hpp
cpp/deeplake_pg/: .clang-tidy  CMakeLists.txt  README_TRANSLATOR.md  build_info.cpp.in  column_statistics.cpp  column_statistics.hpp  deeplake_executor.cpp  deeplake_executor.hpp  deeplake_utils.hpp  dl_catalog.cpp  dl_catalog.hpp  dl_wal.cpp  dl_wal.hpp  duckdb_deeplake_convert.cpp  duckdb_deeplake_convert.hpp  duckdb_deeplake_scan.cpp  duckdb_deeplake_scan.hpp  duckdb_executor.cpp  duckdb_executor.hpp  duckdb_pg_convert.cpp  duckdb_pg_convert.hpp  exceptions.hpp  extension_init.cpp  hybrid_query_merge.hpp  index_search.cpp  is_pure_count_star_query.hpp  logger.hpp  memory_tracker.cpp  memory_tracker.hpp  nd_utils.hpp  pg_deeplake.cpp  pg_deeplake.hpp  pg_to_duckdb_translator.cpp  pg_to_duckdb_translator.hpp  pg_version_compat.h  progress_utils.hpp  reporter.hpp  sync_worker.cpp  sync_worker.hpp  table_am.cpp  (+14 more)
cpp/deeplog/: CMakeLists.txt  base_snapshot.cpp  base_snapshot.hpp  deeplog.cpp  deeplog.hpp  deeplog.python.cpp  deeplog.test.cpp  deeplog_v3.cpp  deeplog_v3.hpp  json_parser.cpp  json_parser.hpp  last_checkpoint.cpp  last_checkpoint.hpp  last_checkpoint.test.cpp  metadata_snapshot.cpp  metadata_snapshot.hpp  optimistic_transaction.cpp  optimistic_transaction.hpp  snapshot.cpp  snapshot.hpp  util.cpp  util.hpp
cpp/format/: buffer.hpp  format.hpp  pod_serializable.hpp  read_result.hpp  sequence_index.hpp  serializable.hpp  serializer.hpp  stl_common.hpp  stl_serializable.hpp
cpp/heimdall/: column.hpp  column_definition_view.hpp  column_id_t.hpp  column_view.hpp  dataset.hpp  dataset_view.hpp  exceptions.hpp  links_info_holder.hpp  row.hpp  row_range.hpp  row_range_view.hpp  row_view.hpp  sample_info_holder.hpp  schema_view.hpp
cpp/heimdall_common/: array_column_view.hpp  casted_column_view.hpp  chained_column_view.hpp  chained_dataset_view.hpp  dataset_filtered_by_columns.hpp  dataset_filtered_by_tensors.hpp  exceptions.hpp  filtered_column.hpp  filtered_dataset.hpp  filtered_tensor.hpp  group_dataset.hpp  is_spatial_column.hpp  is_spatial_tensor.hpp  merged_column.hpp  merged_dataset.hpp  merged_tensor.hpp  nullary_transformed_column.hpp  original_dataset_objects_over_chain.hpp  resized_column.hpp  resized_dataset.hpp  resized_tensor.hpp  scalar_column.hpp  sequence_column.hpp  sequence_dataset.hpp  sequence_tensor.hpp  sliced_column.hpp  sliced_dataset.hpp  sliced_tensor.hpp  spatial_column.hpp  spatial_dataset.hpp  spatial_tensor.hpp  unary_transformed_column.hpp
cpp/http/: exceptions.hpp  uri.hpp  url.hpp
cpp/icm/: bit_vector.hpp  colony.hpp  const_json.hpp  exceptions.hpp  fifo_map.hpp  flat_iterator.hpp  index_based_iterator.hpp  index_mapping.hpp  indexable.hpp  json.hpp  json_wrapper.hpp  parse_negative_index.hpp  roaring.hpp  schema.hpp  schema_field.hpp  shape.hpp  shape_array.hpp  slice.hpp  slice_shape.hpp  small_vector.hpp  string_map.hpp  string_set.hpp  trie.hpp  trie_node.hpp  vector.hpp
cpp/nd/: adapt.hpp  arithmetic.hpp  array.hpp  array_cast.hpp  array_dynamic_stream_writer.hpp  array_stream_writer.hpp  array_to_json.hpp  cast.hpp  (+30 more)
pheonix/: BUILD  CMakeLists.txt  benchmark.py  eventuals.cpp  libpheonix.cpp  main.py  readme.md  requests.h  scheduler.h
(+2655 files in other folders)
