[tool.poetry]
name = "deeplake"
version = "3.9.24"
description = "Activeloop Deep Lake"
authors = ["activeloop.ai <support@activeloop.ai>"]
license = "MPL-2.0"
readme = "README.md"

homepage = "https://activeloop.ai/"
repository = "https://github.com/activeloopai/deeplake"
documentation = "https://docs.activeloop.ai/"

classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
]

[tool.poetry.dependencies]
virtualenv = [
    { version = "^20.4.3,!=20.4.5,!=20.4.6" },
    # see https://github.com/python-poetry/poetry/pull/6950 for details
    { version = "<20.16.6", markers = "sys_platform == 'win32' and python_version == '3.9'" },
]
python = ">=3.9,<=3.13"
pillow = "~10.4.0"
numpy = "<2.0"
boto3 = "*"
click = "*"
pathos = "*"
humbug = ">=0.3.1"
tqdm = "*"
lz4 = "*"
pyjwt = "*"
pydantic = "*"
libdeeplake = { version = "0.0.145", markers = "python_version >= '3.8' and sys_platform != 'win32'" }

av = { version = ">=8.1.0", markers = "python_version >= '3.7' or sys_platform != 'win32'" }
aioboto3 = { version = ">=10.4.0", markers = "python_version >= '3.7' and sys_platform != 'win32'" }

[tool.poetry.extras]
gcp = ["google-cloud-storage", "google-auth", "google-auth-oauthlib"]
av = ["av"]
dicom = ["pydicom", "nibabel"]
medical = ["pydicom", "nibabel"]
visualizer = ["IPython", "flask"]
gdrive = [
    "google-api-python-client",
    "oauth2client",
    "google-auth",
    "google-auth-oauthlib"
]
point_cloud = ["laspy"]
mesh = ["laspy", "numpy-stl"]
enterprise = ["pyjwt"]
all = [
    "av",
    "google-cloud-storage",
    "google-auth",
    "google-auth-oauthlib",
    "azure-cli",
    "azure-identity",
    "azure-storage-blob",
    "pydicom",
    "nibabel",
    "IPython",
    "flask",
    "google-api-python-client",
    "oauth2client",
    "laspy",
    "numpy-stl",
    "pyjwt"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = ["deeplake"]