[tool.poetry]
name = "deeplake"
version = "3.9.46"
description = "Activeloop Deep Lake"
authors = ["activeloop.ai <support@activeloop.ai>"]
license = "MPL-2.0"
readme = "README.md"

homepage = "https://activeloop.ai/"
repository = "https://github.com/activeloopai/deeplake"
documentation = "https://docs.activeloop.ai/"

classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]

[tool.poetry.dependencies]
numpy = [
    { version = "^1.24.0", python = "<3.12" },
    { version = "^1.26.0", python = ">=3.12" },
]
botocore = "*"
python = ">=3.8,<=3.13"
pillow = "~10.4.0"
boto3 = "*"
click = "*"
pathos = "*"
humbug = ">=0.3.1"
tqdm = "*"
lz4 = "*"
pyjwt = "*"
pydantic = "*"
libdeeplake = { markers = "python_version >= '3.8' and sys_platform != 'win32'" }
av = { version = ">=8.1.0", markers = "python_version >= '3.7' or sys_platform != 'win32'" }
aioboto3 = { version = ">=10.4.0", markers = "python_version >= '3.7' and sys_platform != 'win32'" }
nest_asyncio = { version = "*", markers = "python_version >= '3.7' and sys_platform != 'win32'" }
google-cloud-storage = { version = "~1.42.0", optional = true }
google-auth = { version = "~2.0.1", optional = true }
google-auth-oauthlib = { version = "~0.4.5", optional = true }
google-api-python-client = { version = "~2.31.0", optional = true }
oauth2client = { version = "~4.1.3", optional = true }
labelbox = { optional = true }

[tool.poetry.extras]
audio = ["av"]
video = ["av"]
gcp = ["google-cloud-storage", "google-auth", "google-auth-oauthlib"]
azure = ["azure-cli", "azure-identity", "azure-storage-blob"]
dicom = ["pydicom", "nibabel"]
medical = ["pydicom", "nibabel"]
visualizer = ["IPython", "flask"]
gdrive = [
    "google-api-python-client",
    "oauth2client",
    "google-auth",
    "google-auth-oauthlib",
]
point_cloud = ["laspy"]
mesh = ["laspy", "numpy-stl"]
enterprise = ["pyjwt"]
labelbox = ["labelbox", "av", "pillow"]
all = [
    "av",
    "google-cloud-storage",
    "google-auth",
    "google-auth-oauthlib",
    "azure-cli",
    "azure-identity",
    "azure-storage-blob",
    "pydicom",
    "nibabel",
    "IPython",
    "flask",
    "google-api-python-client",
    "oauth2client",
    "laspy",
    "numpy-stl",
    "pyjwt",
    "labelbox",
]


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
relative_files = true
source = ["deeplake"]
